@@ -186,12 +186,14 @@ public:
     static bool treatAsZeroWidthSpace(UChar c) { return c < 0x20 || (c >= 0x7F && c < 0xA0) || c == 0x200e || c == 0x200f; }
 private:
     FontDescription m_fontDescription;
-    short m_letterSpacing;
-    short m_wordSpacing;
 #if !PLATFORM(QT)
     mutable RefPtr<FontFallbackList> m_fontList;
     mutable HashMap<int, GlyphPageTreeNode*> m_pages;
     mutable GlyphPageTreeNode* m_pageZero;
+#endif
+    short m_letterSpacing;
+    short m_wordSpacing;
+#if !PLATFORM(QT)
     bool m_isPlatformFont;
 #else
     QFont m_font;
